# usb-magnetometer.embedded

./: .mxproject  CMakeLists.txt  Makefile  STM32L010C6Tx_FLASH.ld  usb-magnetometer.ioc
Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Core/Src/: gpio.c  main.c  spi.c  stm32l0xx_it.c  usart.c
Project/: project_main.c  project_main.h
Project/inc/: sensor.h  sensor_defines.h  server.h
Project/src/: sensor.c  server.c
